@@ -239,3 +239,4 @@
  13-May-2020  V0.983 Adjustments to suppress materialization of an assembly of deposited coordinates
  15-May-2020  V0.984 Adjustments to suppress logging of missing assembly data
  16-May-2020  V0.985 Adding test case for branched entity replace test
+ 18-May-2020  V0.986 More complete object purge for loadType replace, explicitly filter heavy atoms in counting stats.
